--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "node-fetch": "^3.3.2",
     "openai": "^4.3.1",
     "pg-promise": "^11.5.4",
     "uuid4": "^2.0.3"
